--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>Kitten Roulette</title>
   <script src="https://cdn.rawgit.com/visionmedia/page.js/master/page.js"></script>
 </head>
 <body>
-  <p>my page</p>
+
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js"integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="crossorigin="anonymous"></script>
 </body>
 </html>
