--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   </head>
   <body>
 
+    <div id="kitty-area"></div>
+
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="crossorigin="anonymous"></script>
     <script type="text/javascript" src="script.js"></script>
   </body>
