--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Kitty Roulette</title>
     <script src="https://cdn.rawgit.com/visionmedia/page.js/master/page.js"></script>
+    <link href="https://file.myfontastic.com/TL7SPECgWqKUURXn2NDXqK/icons.css" rel="stylesheet">
   </head>
   <body>
 
