--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Kitty Roulette</title>
     <script src="https://cdn.rawgit.com/visionmedia/page.js/master/page.js"></script>
     <link href="https://file.myfontastic.com/TL7SPECgWqKUURXn2NDXqK/icons.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="dist/style.css">
   </head>
   <body>
 
