added link to favorites page

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   </head>
   <body>
 
+    <a href="/favs" class="btn">Favs</a>
     <div id="kitty-area"></div>
 
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="crossorigin="anonymous"></script>
