--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <body>
 
     <a href="/favs" class="btn">Favs</a>
+    <a href="/" class="btn">Home</a>
     <div id="kitty-area"></div>
 
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="crossorigin="anonymous"></script>
