--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
   <body>
 
     <a href="/favs" class="btn">Favs</a>
-    <a href="/" class="btn">Home</a>
+    <a href="/" id="home" class="btn">home</a>
     <div id="kitty-area"></div>
+    <a href="/" id="more" class="btn">Click for more Kitties</a>
 
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="crossorigin="anonymous"></script>
     <script type="text/javascript" src="dist/script.js"></script>
