--- a/index.html
+++ b/index.html
@@ -8,13 +8,21 @@
     <script src="https://cdn.rawgit.com/visionmedia/page.js/master/page.js"></script>
     <link href="https://file.myfontastic.com/TL7SPECgWqKUURXn2NDXqK/icons.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="dist/style.css">
+    <link href="https://fonts.googleapis.com/css?family=K2D:400,700,800" rel="stylesheet">
   </head>
   <body>
+    <header class="header">
+      <a href="/" id="home" class="icon-home btn">home</a>
+      <img src="/dist/images/logo.png">
+      <a href="/favs" id="favs" class="icon-heart btn">Favs</a>
+    </header>
 
-    <a href="/favs" class="btn">Favs</a>
-    <a href="/" id="home" class="btn">home</a>
-    <div id="kitty-area"></div>
+    <div id="kitty-area"></div>    
     <a href="/" id="more" class="btn">Click for more Kitties</a>
+
+    <footer class="footer">
+
+    </footer>
 
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="crossorigin="anonymous"></script>
     <script type="text/javascript" src="dist/script.js"></script>
