--- a/index.html
+++ b/index.html
@@ -11,17 +11,23 @@
     <link href="https://fonts.googleapis.com/css?family=K2D:400,700,800" rel="stylesheet">
   </head>
   <body>
-    <header class="header">
-      <a href="/" id="home" class="icon-home btn">home</a>
-      <img src="/dist/images/logo.png">
-      <a href="/favs" id="favs" class="icon-heart btn">Favs</a>
-    </header>
+    <div class="header1">
+        <img class="header-cat1" src="/dist/images/cat.jpg">
+        <h2>random cat images!</h2>
+        <img class="header-cat2" src="/dist/images/cat2.jpg">
+    </div>
+    <div class="menu">
+        <a href="/" id="home" class="icon-home btn"> home</a>
+        <a href="/" id="logo" class="btn">Kitty Roulette</a>
+        <a href="/favs" id="favs" class="icon-heart btn"> Favs</a>
+    </div>
 
-    <div id="kitty-area"></div>    
-    <a href="/" id="more" class="btn">Click for more Kitties</a>
+    <div id="kitty-area"></div>
+    <a href="/" id="more" class="btn">Click for more Kitties!</a>
 
     <footer class="footer">
-
+      <p>website uses API - https://thecatapi.com/</p>
+      <p>© 2018 Labotatória - Mayara Ramos Rebelo</p>
     </footer>
 
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="crossorigin="anonymous"></script>
