--- a/public/index.html
+++ b/public/index.html
@@ -8,12 +8,27 @@
     <script src="https://cdn.rawgit.com/visionmedia/page.js/master/page.js"></script>
     <link href="https://file.myfontastic.com/TL7SPECgWqKUURXn2NDXqK/icons.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="dist/style.css">
+    <link href="https://fonts.googleapis.com/css?family=K2D:400,700,800" rel="stylesheet">
   </head>
   <body>
+    <div class="header1">
+        <img class="header-cat1" src="/dist/images/cat.jpg">
+        <h2>random cat images!</h2>
+        <img class="header-cat2" src="/dist/images/cat2.jpg">
+    </div>
+    <div class="menu">
+        <a href="/" id="home" class="icon-home btn"> home</a>
+        <a href="/" id="logo" class="btn">Kitty Roulette</a>
+        <a href="/favs" id="favs" class="icon-heart btn"> Favs</a>
+    </div>
 
-    <a href="/favs" class="btn">Favs</a>
-    <a href="/" class="btn">Home</a>
     <div id="kitty-area"></div>
+    <a href="/" id="more" class="btn">Click for more Kitties!</a>
+
+    <footer class="footer">
+      <p>website uses API - https://thecatapi.com/</p>
+      <p>© 2018 Labotatória - Mayara Ramos Rebelo</p>
+    </footer>
 
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="crossorigin="anonymous"></script>
     <script type="text/javascript" src="dist/script.js"></script>
